# rm_nuisance

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: release.yml
docs/: functional_requirements.md
inc/: cmd_args_parcer.h  config.h  decoder.h  encoder.h  nuisance_detector.h  orchestrator.h  segment_eraser.h  storage.h  utils.h  whisper_analyzer.h
src/: cmd_args_parcer.cpp  decoder.cpp  encoder.cpp  main.cpp  nuisance_detector.cpp  orchestrator.cpp  segment_eraser.cpp  utils.cpp  whisper_analyzer.cpp
test/: test_cmd_args_handler.cpp  test_cmd_args_parcer.cpp  test_nuisance_detector.cpp  test_orchestrator_and_analyzer.cpp
test/test_audio/in/: 1.m4a  breath.m4a  clicks.m4a  noise.m4a  parasitic_words.m4a  pauses.m4a
